--- a/login.css
+++ b/login.css
@@ -3,8 +3,8 @@
 	padding: 0;
 }
 .container{
-	width: 100%;
-	height: 100%;
+	width: auto;
+	height: 100vh;
 	font-family: sans-serif;
 	background: rgb(187, 187, 245);
 	color: #fff;
@@ -14,11 +14,18 @@
 }
 .card{     
 	width: 350px;
-	height: 500px;
+	height: 550px;
 	box-shadow: 0 0 40px 20px rgba(0, 0, 0,0.26);
 	perspective: 1000px ;
+	border-radius: 10%;
 }
-
+.inner-box{
+	position: relative;
+	width: 100%;
+	height: 100%;
+	transition: transform 1s;
+	transform-style: preserve-3d;
+}
 .front{
 	position: absolute;
 	width: 100%;
@@ -28,8 +35,10 @@
 	background-image: linear-gradient(rgba(0,0,100,0.8),rgba(0,0,100,0.8)),url(bg.jpg);
 	padding: 55px;
 	box-sizing: border-box;
-	backface-visibility: hidden;
+	border-radius: 10%;
+	
 }
+
 .card h1{
 	font-weight: normal;
 	font-size: 24px;
@@ -41,7 +50,7 @@
 	width: 100%;
 	background: transparent;
 	border: 1px solid #fff;
-	margin: 12px 0;
+	margin: 6px 0;
 	height: 32px;
 	border-radius: 20px;
 	padding: 0 10px;
@@ -49,6 +58,10 @@
 	outline: none;
 	text-align: center;
 	color: #fff;
+}
+::placeholder{
+	color: #fff;
+	font-size: 12px;
 }
 button{
 	width: 100%;
@@ -64,7 +77,37 @@ button{
 	color: #fff;
 	cursor: pointer;
 }
-.login-btn{
+.submit-btn{
+	position: relative;
+
+}
+.submit-btn::after{
+	content: '\27a4';
+	color: #333;
+	line-height: 32px;
+	font-size: 17px;
+	height: 32px;
+	width: 32px;
+	border-radius: 50%;
+	background: #fff;
+	position: absolute;
+	right: -1px;
+	top: -1px;
+}
+.card .btn{
+	margin-top: 90px;
+}
+.card a{
+	color: #fff;
+	display: block;
+	text-align: center;
+	font-size: 13px;
+	margin-top: 8px;
+}
+.card .btn2{
+	margin-top: 30px;
+}
+.reg-btn,.login-btn{
 	position: relative;
 
 }
@@ -81,13 +124,16 @@ button{
 	right: -1px;
 	top: -1px;
 }
-.card .reg-btn{
-	margin-top: 30px;
-}
-.card a{
-	color: #fff;
-	display: block;
-	text-align: center;
-	font-size: 13px;
-	margin-top: 8px;
+.reg-btn::after{
+	content: '\27a4';
+	color: #333;
+	line-height: 32px;
+	font-size: 17px;
+	height: 32px;
+	width: 32px;
+	border-radius: 50%;
+	background: #fff;
+	position: absolute;
+	right: -1px;
+	top: -1px;
 }
