--- a/Admin/register.css
+++ b/Admin/register.css
@@ -3,8 +3,8 @@
 	padding: 0;
 }
 .container{
-	width: 100%;
-	height: 100%;
+	width: auto;
+	height: 100vh;
 	font-family: sans-serif;
 	background: rgb(187, 187, 245);
 	color: #fff;
@@ -17,6 +17,7 @@
 	height: 650px;
 	box-shadow: 0 0 40px 20px rgba(0, 0, 0,0.26);
 	perspective: 1000px ;
+	border-radius: 10%;
 }
 .card-back{
 	position: absolute;
@@ -27,7 +28,7 @@
 	background-image: linear-gradient(rgba(0,0,100,0.8),rgba(0,0,100,0.8)),url(bg.jpg);
 	padding: 55px;
 	box-sizing: border-box;
-	
+	border-radius: 10%;
 }
 .card h1{
 	font-weight: normal;
