--- a/home.css
+++ b/home.css
@@ -6,7 +6,7 @@
 }
 
 body{
-     background: url('./mix.jpg') no-repeat;
+     background: url('./mess.png') no-repeat;
      background-size: cover;
    
  }
