--- a/Admin/forgot.css
+++ b/Admin/forgot.css
@@ -6,7 +6,7 @@
 body{
     width: 100%;
 	height: 100%;
-	background: rgb(187, 187, 245);
+	background: linear-gradient(red,blue);
 	color: #fff;
 	display: flex;
 	align-items: center;
@@ -25,7 +25,7 @@ body{
 	height: 100%;
 	background-position: center;
 	background-size: cover;
-	background-image: linear-gradient(rgba(0,0,100,0.8),rgba(0,0,100,0.8)),url(bg.jpg);
+	background-image: linear-gradient(black,black),url(bg.jpg);
 	padding: 55px;
 	box-sizing: border-box;
 	border-radius: 10%;
