--- a/Admin/login.css
+++ b/Admin/login.css
@@ -6,7 +6,7 @@
 	width: auto;
 	height: 100vh;
 	font-family: sans-serif;
-	background: rgb(187, 187, 245);
+	background: linear-gradient(blue,red);
 	color: #fff;
 	display: flex;
 	align-items: center;
@@ -32,7 +32,7 @@
 	height: 100%;
 	background-position: center;
 	background-size: cover;
-	background-image: linear-gradient(rgba(0,0,100,0.8),rgba(0,0,100,0.8)),url(bg.jpg);
+	background-image: linear-gradient(black,black),url(bg.jpg);
 	padding: 55px;
 	box-sizing: border-box;
 	border-radius: 10%;
@@ -66,7 +66,7 @@ input::placeholder{
 	font-size: 12px;
 }
 /*.show-hide{
-	position:absolute;
+	position: absolute;
 	color: #a6a6a6;
 	right: 15px;
 	top: 50%;
@@ -76,7 +76,7 @@ input::placeholder{
 	font-size: 19px;
 	color: black;
 	cursor: pointer;
-	display: none;
+	display: block;
 
 }
 .show-hide i.hide::before{
