--- a/Admin/main.css
+++ b/Admin/main.css
@@ -5,13 +5,13 @@
     box-sizing: border-box;
 }
 body{
-    background: url('./mix.jpg') no-repeat;
+   
     background-size: cover;
     
   
 } 
 .menu-bar{
-    background: rgb(0, 100, 0);
+    background: blue;
     text-align: center;
 
 }
@@ -30,7 +30,7 @@ body{
     text-decoration: none;
 }
 .active, .menu-bar ul li:hover{
-    background:green;
+    background:black;
     border-radius: 3px;
 }
 .menu-bar .fas{
@@ -42,7 +42,7 @@ body{
 .menu-bar ul li:hover .sub-menu1{
     display: block;
     position: absolute;
-    background: rgb(0, 100, 0);
+    background:blue;
     margin-top: 15px;
     margin-left: -15px;
 }
