--- a/Admin/register.css
+++ b/Admin/register.css
@@ -2,11 +2,12 @@
 	margin: 0;
 	padding: 0;
 }
+
 .container{
 	width: auto;
 	height: 100vh;
 	font-family: sans-serif;
-	background: rgb(187, 187, 245);
+	background: linear-gradient(red,blue);
 	color: #fff;
 	display: flex;
 	align-items: center;
@@ -25,7 +26,7 @@
 	height: 100%;
 	background-position: center;
 	background-size: cover;
-	background-image: linear-gradient(rgba(0,0,100,0.8),rgba(0,0,100,0.8)),url(bg.jpg);
+	background-image: linear-gradient(black,black),url(bg.jpg);
 	padding: 55px;
 	box-sizing: border-box;
 	border-radius: 5%;
